Bug 75028 - Backlight helper build fixes
Summary: Backlight helper build fixes
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: All Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-15 17:25 UTC by Jan Alexander Steffens (heftig)
Modified: 2014-02-15 17:40 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
patch (3.71 KB, text/plain)
2014-02-15 17:25 UTC, Jan Alexander Steffens (heftig)
no flags Details

Description Jan Alexander Steffens (heftig) 2014-02-15 17:25:42 UTC
Created attachment 94129 [details]
patch

Don't hardcode $(prefix)/libexec

Fix install hook when DESTDIR is set
Comment 1 Chris Wilson 2014-02-15 17:40:05 UTC
Thanks! And also resolves the mystery of having to use data-hook instead of exec-hook.

commit b71f3d8bd4d6773899c1bdc903911cf240e68ead
Author: Jan Alexander Steffens (heftig) <jan.steffens@gmail.com>
Date:   Sat Feb 15 17:53:16 2014 +0100

    Backlight helper build fixes
    
    Don't hardcode $(prefix)/libexec
    
    Fix install hook when DESTDIR is set
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=75028


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.